[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemy/sprite.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Enemy/shield-2.png" type="Texture" id=3]
[ext_resource path="res://Enemy/shield-1.png" type="Texture" id=4]
[ext_resource path="res://Enemy/14056__adcbicycle__3.ogg" type="AudioStream" id=5]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.5

[sub_resource type="CircleShape2D" id=2]
radius = 30.6473

[node name="Enemy" type="RigidBody2D" groups=[
"enemy",
]]
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
angular_damp = 0.01
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="sprite_neutral" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="sprite_red" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="sprite_blue" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="HitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
